@@ -5,6 +5,8 @@ Version SVN trunk (?)
   * Translation Fix: MacroEditor.cpp and MacrosSetup.cpp were not under
     translation control.
   * Spelling fixes (patch provided by Debian maintainer Jaromír Mikeš).
+  * Added new main menu item "View" -> "Tooltips for Beginners" which allows
+    to disable tooltips intended for newbies only (default: on).
 
 Version 1.1.0 (2017-11-25)
 
